--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 </head>
 <body>
     <h1><span>Make Your Own Shopping List</span></h1>
+    <div class="container">
+        <input id="userInput" type="text" placeholder="Enter Item">
+        <button id="add_btn">Add</button>
+        <h3>List Goes Here</h3>
+    </div>
 </body>
 </html>
