--- a/index.html
+++ b/index.html
@@ -5,17 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping List</title>
+    <!-- Personal Style sheet -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Page title -->
     <h1><span>Make Your Own Shopping List</span></h1>
+    <!-- Holds the input box, button, and list of items -->
     <div class="container">
         <input id="userInput" type="text" placeholder="Enter Item">
         <button id="add_btn">Add</button>
-        <h3>List Goes Here</h3>
-        <ul>
-            
-        </ul>
+        <div class="reminder">
+            <h3>Don't Forget Anything</h3>
+            <p id="emoji">&#128522</p>
+        </div>
+        <ul></ul>
+        <div>
+            <button id="clear_btn">Clear List</button>
+            <button id="removeLast_btn">Remove Last Item</button>
+        </div>
     </div>
+    <!-- Personal javascript -->
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
