Added more descriptive comments to the code

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     <div class="container">
         <input id="userInput" type="text" placeholder="Enter Item">
         <button id="add_btn">Add</button>
+        <!-- Uses flexbox to center and align header and emoji -->
         <div class="reminder">
             <h3>Don't Forget Anything</h3>
             <p id="emoji">&#128522</p>
         </div>
+        <!-- Empty list where user will add items -->
         <ul></ul>
         <div>
             <button id="clear_btn">Clear List</button>
