--- a/index.html
+++ b/index.html
@@ -20,12 +20,9 @@
             <h3>Don't Forget Anything</h3>
             <p id="emoji">&#128522</p>
         </div>
-        <!-- Empty list where user will add items -->
-        <ul></ul>
-        <div>
-            <button id="clear_btn">Clear List</button>
-            <button id="removeLast_btn">Remove Last Item</button>
-        </div>
+        <!-- Empty div where user will add items -->
+        <div id="listStorage"></div>
+        <button id="clear_btn">Clear List</button>
     </div>
     <!-- Personal javascript -->
     <script type="text/javascript" src="script.js"></script>
