Introduced using CSS grid instead of flexbox to align the list items so as to have them spread out better on the screen

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p id="emoji">&#128522</p>
         </div>
         <!-- Empty div where user will add items -->
-        <div id="listStorage"></div>
+        <div id="itemContainer"></div>
         <button id="clear_btn">Clear List</button>
     </div>
     <!-- Personal javascript -->
