Made the list items clickable so that they can have a strikethrough if ocmplete and added functionality so that the x button removes only that list item while the clear button removes all items from the list. Webiste is not complete functionally

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h3>Don't Forget Anything</h3>
             <p id="emoji">&#128522</p>
         </div>
-        <!-- Empty div where user will add items -->
+        <!-- Empty div where user will add divs of the items and buttons -->
         <div id="itemContainer"></div>
         <button id="clear_btn">Clear List</button>
     </div>
