--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping List</title>
+    <!-- Animate.css animations stylesheet -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <!-- Personal Style sheet -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Page title -->
-    <h1><span>Make Your Own Shopping List</span></h1>
+    <h1 class="animate__animated animate__backInDown"><span>Make Your Own Shopping List</span></h1>
     <!-- Holds the input box, button, and list of items -->
-    <div class="container">
+    <div class="container animate__animated animate__flipInX">
         <input id="userInput" type="text" placeholder="Enter Item">
         <button id="add_btn">Add</button>
         <!-- Uses flexbox to center and align header and emoji -->
